Introduce mixin for min-max width and fixed overflow

--- a/src/styles/yummy-variables.scss
+++ b/src/styles/yummy-variables.scss
@@ -5,3 +5,5 @@ $color-whitesmoke: whitesmoke;
 $color-green: #388e3c;
 $color-red: #e74f4f;
 $default-font-family: 'Indie Flower';
+$container-standard-min-width: 18em;
+$container-standard-max-width: 30em;
